# college

./: Detail_PRD.xlsx  PRD.md  PRDv2.md  README.md  pyproject.toml  requirements.txt  verify_policies.py  verify_policies.sh
.trae/documents/: Implement Missing Annexure Controls and Infrastructure.md
remotecli/: How to run.txt  alerts.py  cli.py  config.py  discovery.py  logging_utils.py  prd_import.py  reports.py  rule_engine.py  security.py  ssh_client.py  storage.py  winrm_client.py
remotecli/agent/: __main__.py  agent.py
remotecli/agent/systemd/: sehcs-agent.service  sehcs-agent.timer
remotecli/agent/windows/: install_service.ps1
remotecli/policies/: linux_policy.yaml  linux_policy_full.yaml  windows_policy.yaml  windows_policy_full.yaml
remotecli/server/: __main__.py  app.py
remotecli/server/templates/: dashboard.html
scripts/: install_agent_linux.sh
